--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
-    "test": "node main.js"
+    "test": "node main.js",
+    "restart": "nodemon main.js"
   },
   "repository": {
     "type": "git",
