--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "connect-four_bot",
+  "name": "connectfour-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "node index.js"
+    "start": "node main.js",
+    "test": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/pagoru/connectfour-bot/issues"
   },
-  "homepage": "https://github.com/pagoru/connectfour-bot#readme"
+  "homepage": "https://github.com/pagoru/connectfour-bot#readme",
+  "dependencies": {
+    "discord.js": "^11.1.0"
+  }
 }
